# aoc-2016

./: README.md  pyproject.toml
src/: main.py
