[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aoc-2016"
version = "0.0.1"
description = "Advent of Code 2016"
readme = "README.md"
license = "LICENSE"
authors = ["Sergii Lovygin <lovygin.dev@gmail.com>"]
maintainers = ["Sergii Lovygin <lovygin.dev@gmail.com>"]
homepage = "https://github.com/stanykey/aoc-2016"
repository = "https://github.com/stanykey/aoc-2016.git"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.dev-dependencies]
pre-commit = "*"
ruff = "*"
mypy = "*"

[tool.poetry.scripts]


[tool.ruff]
fix = true
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
extend-select = ["I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
